# elm-make

./: README.md  api.md  elm-make.cabal
src/: Arguments.hs  Build.hs  BuildManager.hs  Crawl.hs  CrawlPackage.hs  CrawlProject.hs  Display.hs  Flags.hs  Generate.hs  LoadInterfaces.hs  Main.hs  Options.hs  Path.hs  Prep.hs  Report.hs  TheMasterPlan.hs
src/CommandLine/: Display.hs
src/Crawl/: DepthFirstSearch.hs  Error.hs  Local.hs  Locations.hs  Packages.hs  Utils.hs  Validate.hs
src/Pipeline/: Compile.hs  Crawl.hs  Generate.hs  Plan.hs  README.md
src/Pipeline/Crawl/: Package.hs
src/Utils/: File.hs  Graph.hs  Queue.hs
