Name: elm-make
Version: 0.18

Synopsis:
    A build tool for Elm projects
Description:
    A nice way to build projects that is aware of both elm-compile and
    elm-package, so it can make the build process very smooth.

Homepage:
    http://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2014 Evan Czaplicki

Category: Build Tool

Build-type: Simple
Cabal-version: >=1.9

Extra-source-files: README.md

source-repository head
    type:     git
    location: git://github.com/elm-lang/elm-make.git

Executable elm-make

    ghc-options:
        -threaded -O2 -W

    hs-source-dirs:
        src

    Main-is:
        Main.hs

    other-modules:
        Flags,
        Path,
        Paths_elm_make,
        Pipeline.Compile,
        Pipeline.Crawl,
        Pipeline.Crawl.Package,
        Pipeline.Generate,
        Pipeline.Plan,
        Report,
        TheMasterPlan,
        Utils.File

    Build-depends:
        aeson,
        ansi-terminal,
        ansi-wl-pprint,
        base >=4.2 && <5,
        binary,
        blaze-html,
        blaze-markup,
        bytestring,
        containers >= 0.3,
        directory,
        elm-compiler == 0.18,
        elm-package,
        filepath,
        mtl >= 2.2.1 && < 3,
        optparse-applicative >=0.11 && <0.12,
        raw-strings-qq,
        time,
        text
